# md2ppt

./: .gitignore  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  prd.md
backend/: .dockerignore  Dockerfile  migrate_data_uris.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: export.py  generation.py  images.py  model_config.py  projects.py  sso.py
backend/app/core/: auth.py  gateway_client.py  image_storage.py  json_repair.py  jwt_token.py  logging_setup.py  security.py
backend/app/core/prompts/: brief.py  consistency.py  import_structure.py  outline.py  revise.py  slide_count.py  slide_prompts.py  source_slide_constraint.py  speech_script.py  style_guide.py
backend/app/models/: db.py  job.py  model_config.py  project.py  schemas.py  time.py
backend/app/services/: export_service.py  generation_service.py  image_generation_service.py  import_job_runner.py  import_service.py  job_service.py  markdown_parser.py  project_service.py  sso_service.py  template_service.py
backend/tests/: test_generation_speedup.py
docs/: backend-generation-speedup-plan.md  imported-prompts-workspace-design.md  review-comments.md  sso-integration.md
docs/superpowers/plans/: 2026-05-11-batch-image-generation.md  2026-05-11-image-model-config.md
docs/superpowers/specs/: 2026-05-11-batch-image-generation-design.md  2026-05-11-image-model-config-design.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  (+6 more)
(+19 files in other folders)
