[project]
name = "md2ppt"
version = "0.1.0"
description = "Local web app for generating PPT-style image prompts from Markdown raw materials."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx[socks]>=0.28.0",
    "markdown-it-py>=3.0.0",
    "sqlmodel>=0.0.22",
    "python-pptx>=1.0.0",
    "pyjwt>=2.8.0",
    "loguru>=0.7.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
